--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
     "@prisma/client": "^4.5.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "socket.io": "^4.5.3"
   },
